add routing auth & main

--- a/src/app/auth/pages/login/login.component.scss
+++ b/src/app/auth/pages/login/login.component.scss
@@ -1,6 +1,6 @@
 .container-login {
     height: 100vh;
-    background: url(../../../assets/img/login/caterpilar.png);
+    background: url(../../../../assets/img/login/caterpilar.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
