--- a/src/app/auth/auth/auth.component.html
+++ b/src/app/auth/auth/auth.component.html
@@ -1,18 +1,1 @@
-<div class="container-login">
-  <div class="bkground-img">
-    <img src="../../../assets/img/login/logo_ferreyros.png" alt="" class="img-logo-ferreyros">
-    <hr class="hr-line">
-    <div class="button-login">
-      <button mat-raised-button color="primary">{{ 'ingresar' | uppercase }}</button>
-    </div>
-    <div class="span-version">
-      <span>{{ version }}</span>
-    </div>
-  </div>
-  <footer class="footer">
-    <div class="footer-flex">
-      <img src="../../../assets/img/login/meraki.png" alt="" class="img-meraki">
-      <img src="../../../assets/img/login/google_cloud.png" alt="" class="img-google">
-    </div>
-  </footer>
-</div>
+<router-outlet></router-outlet>
