--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -1,27 +1,43 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
+  <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+    [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Mejoras</a>
+      <div>
+
+        <a mat-list-item [routerLink]="['/main/improvements']" routerLinkActive="active" (click)="drawer.toggle()">
+          <mat-icon mat-list-icon></mat-icon>
+          <span>
+            Mejoras
+          </span>
+        </a>
+        <a mat-list-item [routerLink]="['/main/spare-parts']" routerLinkActive="active" (click)="drawer.toggle()">
+          <mat-icon mat-list-icon></mat-icon>
+          <span>
+            Revisión de repuestos
+          </span>
+        </a>
+        <a mat-list-item [routerLink]="['/main/settings']" routerLinkActive="active" (click)="drawer.toggle()">
+          <mat-icon mat-list-icon></mat-icon>
+          <span>
+            Configuración
+          </span>
+        </a>
+      </div>
+      <!-- <a mat-list-item href="#">Mejoras</a>
       <a mat-list-item href="#">Revisión de repuestos</a>
-      <a mat-list-item href="#">Configuración</a>
+      <a mat-list-item href="#">Configuración</a> -->
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        >
+      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>ingenieria-dsp</span>
     </mat-toolbar>
-    <!-- Add Content Here -->
+    <div>
+      <router-outlet></router-outlet>
+    </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
