add botton exit and change color

--- a/src/app/main/main/main.component.scss
+++ b/src/app/main/main/main.component.scss
@@ -1,3 +1,13 @@
+
+.main_toolbar{
+  background: #333333;
+  color: white;
+}
+.btn-exit-app{
+  position: absolute;
+  right: 50px;
+}
+
 .sidenav-container {
   height: 100%;
 }
