--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -11,7 +11,7 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
+    <mat-toolbar class="main_toolbar">
       <button
         type="button"
         aria-label="Toggle sidenav"
@@ -20,6 +20,18 @@
         >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
+
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-button
+        class="btn-exit-app"
+        (click)="exitApp()"
+        >
+        CERRAR SESION
+        <mat-icon aria-label="Side nav toggle icon">exit_to_app</mat-icon>
+      </button>
+
       <span>ingenieria-dsp</span>
     </mat-toolbar>
     <!-- Add Content Here -->
