--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -1,57 +1,50 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-    [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
+    [mode]="(isHandset$ | async) ? 'over' : 'over'" [opened]="(isHandset$ | async) === false">
+    <mat-toolbar class="color-toolbar-sidebar"></mat-toolbar>
+    <mat-card class="mat-elevation-z0 mat-card-user">
+      <div mat-card-avatar style="margin-top: 40px;margin-bottom: 30px;">
+        <img [src]="claims.picture" alt="">
+      </div>
+      <mat-card-content>
+        <mat-card-title class="text-menu-title-user">{{ claims.name }}</mat-card-title>
+        <mat-card-subtitle class="text-menu-title-role">{{claims.email}}</mat-card-subtitle>
+      </mat-card-content>
+    </mat-card>
+    <hr class="hr-line">
     <mat-nav-list>
       <div>
-
         <a mat-list-item [routerLink]="['/main/improvements']" routerLinkActive="active" (click)="drawer.toggle()">
-          <mat-icon mat-list-icon></mat-icon>
-          <span>
+          <mat-icon mat-list-icon class="mat-icon-menu">turned_in</mat-icon>
+          <span class="mat-item-list-span">
             Mejoras
           </span>
         </a>
         <a mat-list-item [routerLink]="['/main/spare-parts']" routerLinkActive="active" (click)="drawer.toggle()">
-          <mat-icon mat-list-icon></mat-icon>
-          <span>
+          <mat-icon mat-list-icon class="mat-icon-menu">verified</mat-icon>
+          <span class="mat-item-list-span">
             Revisión de repuestos
           </span>
         </a>
         <a mat-list-item [routerLink]="['/main/settings']" routerLinkActive="active" (click)="drawer.toggle()">
-          <mat-icon mat-list-icon></mat-icon>
-          <span>
+          <mat-icon mat-list-icon color="primary" class="mat-icon-menu">settings</mat-icon>
+          <span style="color: #6200EE" class="mat-item-list-span">
             Configuración
           </span>
         </a>
       </div>
-      <!-- <a mat-list-item href="#">Mejoras</a>
-      <a mat-list-item href="#">Revisión de repuestos</a>
-      <a mat-list-item href="#">Configuración</a> -->
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar class="main_toolbar">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        >
+      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-button
-        class="btn-exit-app"
-        (click)="exitApp()"
-        >
+      <button type="button" aria-label="Toggle sidenav" mat-button class="btn-exit-app" (click)="exitApp()">
         CERRAR SESION
         <mat-icon aria-label="Side nav toggle icon">exit_to_app</mat-icon>
       </button>
-
-      <span>ingenieria-dsp</span>
+      <span>Ingeniería DSP</span>
     </mat-toolbar>
     <div>
       <router-outlet></router-outlet>
