--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -50,9 +50,9 @@
       <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
-</mat-sidenav-container> -->
+</mat-sidenav-container> 
 
-
+<!-- 
 <div class="">
   <mat-sidenav-container style="height:100vh;">
       <mat-sidenav mode="over" #sideMenu [(opened)]="openedMenu" class="container-toolbar">
@@ -122,3 +122,4 @@
 
 
 
+ -->
