--- a/src/app/main/pages/improvements/improvements.component.html
+++ b/src/app/main/pages/improvements/improvements.component.html
@@ -1,1 +1,13 @@
-<p>improvements works!</p>
+
+
+<div class="container">
+    <div class="header-container">
+        <mat-icon mat-list-icon class="mat-icon-menu">turned_in</mat-icon>
+        <h1>Mejoras</h1>
+        <button type="button" aria-label="add" mat-button class="btn-add">
+            <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
+            CREAR
+        </button>
+    </div>
+    
+</div>
