--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-    [mode]="(isHandset$ | async) ? 'over' : 'over'" [opened]="(isHandset$ | async) === false">
+    [mode]="(isHandset$ | async) ? 'over' : 'push'" [opened]="(isHandset$ | async) === false">
     <mat-toolbar class="color-toolbar-sidebar"></mat-toolbar>
     <mat-card class="mat-elevation-z0 mat-card-user">
       <div mat-card-avatar style="margin-top: 40px;margin-bottom: 30px;">
@@ -8,7 +8,7 @@
       </div>
       <mat-card-content>
         <mat-card-title class="text-menu-title-user">{{ claims.name }}</mat-card-title>
-        <mat-card-subtitle class="text-menu-title-role">{{claims.email}}</mat-card-subtitle>
+        <mat-card-subtitle class="text-menu-title-role">{{claims.role}}</mat-card-subtitle>
       </mat-card-content>
     </mat-card>
     <hr class="hr-line">
