--- a/src/app/auth/pages/login/login.component.scss
+++ b/src/app/auth/pages/login/login.component.scss
@@ -1,19 +1,51 @@
-.container-login {
+.container {
     height: 100vh;
     background: url(../../../../assets/img/login/caterpilar.png);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: cover;
+    background-position: center;
+    transition: 300ms linear;
+    // background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(97,9,121,1) 50%, rgba(0,212,255,1) 100%);
 }
 
-.bkground-img {
+.login {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    min-width: 375px;
-    height: 302px;
-    background: rgba(255, 255, 255, 0.7);
-    border-radius: 10.4498px;
+    min-width: 320px;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 15px;
+    box-shadow: 10px 10px 50px rgba($color: #000000, $alpha: 0.5);
+    backdrop-filter: blur(5px);
+    border-top: 1px solid rgba($color: #fff, $alpha: 0.5);
+    border-left: 1px solid rgba($color: #fff, $alpha: 0.5);
+    transition: 300ms linear;
+
+    &__logo {
+        width: 300px;
+        position: relative;
+        left: 50%;
+        transform: translate(-50%, 0px);
+    }
+
+    &__button {
+        background: #6200ee;
+        left: 50%;
+        transform: translate(-50%, 0%);
+        padding: 8px 8px;
+        margin: 36px 0px 24px 0px;
+        width: 84%;
+        font-weight: 500;
+
+        &--icon {
+            width: 18px;
+            margin-right: 8px;
+            background: #fff;
+            padding: 4px 4px;
+            border-radius: 50%;
+            vertical-align: middle;
+        }
+    }
 }
 
 .footer {
@@ -24,7 +56,7 @@
     width: 100%;
 }
 
-.footer-flex {
+.footer__flex {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,52 +64,29 @@
 }
 
 .img-meraki {
-    height: 180px;
-    height: 55px;
+    height: 150px;
+    height: 35px;
 }
 
 .img-google {
-    height: 230px;
-    height: 75px;
-}
-
-.img-logo-ferreyros {
-    width: 374px;
-    height: 143px;
-}
-
-.hr-line {
-    background-color: black;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.button-login {
-    margin-top: 63px;
-    margin-bottom: 17px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-
-.button-login button {
-    background: #6200ee;
-    border-radius: 4px;
-    width: 159px;
-    height: 37px;
+    height: 200px;
+    height: 55px;
 }
 
 .span-version {
-    margin-right: 5px;
+    margin-right: 28px;
+    margin-bottom: 12px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: flex-end;
+    color: #2b2b2b;
+    font-weight: 500;
+    font-size: 0.8rem;
 }
 
 @media (min-width: 568px) {
-    .footer-flex {
+    .footer__flex {
         margin-left: 25px;
         margin-right: 25px;
         margin-bottom: 20px;
