init component improvements

--- a/src/app/main/pages/improvements/improvements.component.scss
+++ b/src/app/main/pages/improvements/improvements.component.scss
@@ -8,7 +8,15 @@
 .btn-add{
   border: 1px #6200EE solid;
   color: #6200EE;
+  margin-left:40px ;
+  padding: 5px 30px 5px 30px;
 }
 .icon-add{
     color: #6200EE;
 }
+.body-container{
+    margin-top: 40px;
+}
+table {
+    width: 100%;
+  }
