--- a/src/app/main/pages/improvements/improvements.component.html
+++ b/src/app/main/pages/improvements/improvements.component.html
@@ -2,12 +2,61 @@
 
 <div class="container">
     <div class="header-container">
-        <mat-icon mat-list-icon class="mat-icon-menu">turned_in</mat-icon>
-        <h1>Mejoras</h1>
+        <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">turned_in</mat-icon>
+        <h1 style="font-size: 2.5em; margin-left: 20px;">Mejoras</h1>
         <button type="button" aria-label="add" mat-button class="btn-add">
             <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
             CREAR
         </button>
     </div>
-    
+    <div class="body-container">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+            <!--- Note that these columns can be defined in any order.
+                  The actual rendered columns are set as a property on the row definition" -->
+          
+            <!-- Position Column -->
+            <ng-container matColumnDef="date">
+              <th mat-header-cell *matHeaderCellDef> Fecha </th>
+              <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+            </ng-container>
+          
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef> Nombre de Mejora </th>
+              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+           
+            <!-- Weight Column -->
+            <ng-container matColumnDef="user">
+              <th mat-header-cell *matHeaderCellDef> Usuario </th>
+              <td mat-cell *matCellDef="let element"> {{element.user}} </td>
+            </ng-container>
+          
+            <!-- Weight Column -->
+            <ng-container matColumnDef="state">
+              <th mat-header-cell *matHeaderCellDef> Estado </th>
+              <td mat-cell *matCellDef="let element"> {{element.state}} </td>
+            </ng-container>
+          
+            <ng-container matColumnDef="actions" stickyEnd>
+                <th mat-header-cell *matHeaderCellDef>
+                  Acciones
+                </th>
+                <td mat-cell *matCellDef="let raw" >
+                  <ng-container >
+                        <mat-icon>edit</mat-icon> 
+                        <mat-icon>delete</mat-icon>
+                   </ng-container>
+                </td>
+              </ng-container>
+          
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+          
+          
+        
+    </div>
+        
 </div>
