--- a/src/app/main/pages/improvements/improvements.component.html
+++ b/src/app/main/pages/improvements/improvements.component.html
@@ -4,39 +4,67 @@
     <div class="header-container">
         <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">turned_in</mat-icon>
         <h1 style="font-size: 2.5em; margin-left: 20px;">Mejoras</h1>
-        <button type="button" aria-label="add" mat-button class="btn-add">
+        <button type="file" aria-label="add" mat-button class="btn-add">
             <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
             CREAR
         </button>
     </div>
     <div class="body-container">
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <div>
+        <table mat-table [dataSource]="improvementDataSource" class="mat-elevation-z8">
 
-            <!--- Note that these columns can be defined in any order.
-                  The actual rendered columns are set as a property on the row definition" -->
-          
-            <!-- Position Column -->
             <ng-container matColumnDef="date">
               <th mat-header-cell *matHeaderCellDef> Fecha </th>
               <td mat-cell *matCellDef="let element"> {{element.date}} </td>
             </ng-container>
           
-            <!-- Name Column -->
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef> Nombre de Mejora </th>
               <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
+            <ng-container matColumnDef="component">
+              <th mat-header-cell *matHeaderCellDef> Componente </th>
+              <td mat-cell *matCellDef="let element"> {{element.component}} </td>
+            </ng-container>
+            <ng-container matColumnDef="model">
+              <th mat-header-cell *matHeaderCellDef> Modelo </th>
+              <td mat-cell *matCellDef="let element"> {{element.model}} </td>
+            </ng-container>
+            <ng-container matColumnDef="review">
+              <th mat-header-cell *matHeaderCellDef> Mejora critica </th>
+              <td mat-cell *matCellDef="let element"> {{element.review}} </td>
+            </ng-container>
+            <ng-container matColumnDef="qty">
+              <th mat-header-cell *matHeaderCellDef> Qty </th>
+              <td mat-cell *matCellDef="let element"> {{element.qty}} </td>
+            </ng-container>
+            <ng-container matColumnDef="current">
+              <th mat-header-cell *matHeaderCellDef> N/P Actual </th>
+              <td mat-cell *matCellDef="let element"> {{element.current}} </td>
+            </ng-container>
+            <ng-container matColumnDef="improved">
+              <th mat-header-cell *matHeaderCellDef>N/P Mejorado </th>
+              <td mat-cell *matCellDef="let element"> {{element.improved}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="stock">
+              <th mat-header-cell *matHeaderCellDef> Stock </th>
+              <td mat-cell *matCellDef="let element"> {{element.stock}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="availability">
+              <th mat-header-cell *matHeaderCellDef> Disponibilidad </th>
+              <td mat-cell *matCellDef="let element"> {{element.availability}}   </td>
+            </ng-container>
            
-            <!-- Weight Column -->
             <ng-container matColumnDef="user">
               <th mat-header-cell *matHeaderCellDef> Usuario </th>
               <td mat-cell *matCellDef="let element"> {{element.user}} </td>
             </ng-container>
           
-            <!-- Weight Column -->
             <ng-container matColumnDef="state">
               <th mat-header-cell *matHeaderCellDef> Estado </th>
-              <td mat-cell *matCellDef="let element"> {{element.state}} </td>
+              <td mat-cell *matCellDef="let element"> <button mat-button style="background: #27AE60; color: white;"> {{element.state}}</button> </td>
             </ng-container>
           
             <ng-container matColumnDef="actions" stickyEnd>
@@ -45,17 +73,31 @@
                 </th>
                 <td mat-cell *matCellDef="let raw" >
                   <ng-container >
+                    <mat-menu #rawMenu="matMenu">
+                      <button class="w3-small" mat-menu-item >
                         <mat-icon>edit</mat-icon> 
+                        Editar
+                      </button>
+                      <button class="w3-small" mat-menu-item >
                         <mat-icon>delete</mat-icon>
-                   </ng-container>
+                        Eliminar
+                      </button>
+                    </mat-menu>
+  
+                    <button mat-icon-button [matMenuTriggerFor]="rawMenu">
+                      <mat-icon>more_vert</mat-icon>
+                    </button>
+                  </ng-container>
+                 
                 </td>
               </ng-container>
           
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-header-row *matHeaderRowDef="improvementDisplayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: improvementDisplayedColumns;"></tr>
           </table>
-          
-          
+        </div>
+          <mat-paginator #improvementPaginator class="ms-paginator" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+          </mat-paginator>        
         
     </div>
         
