--- a/src/app/main/main/main.component.scss
+++ b/src/app/main/main/main.component.scss
@@ -59,8 +59,8 @@ $base-font: "Poppins", sans-serif;
 }
 
 mat-card img {
-  background-size: cover; /*this makes the image in src fit to the size specified below*/
-  width: 100%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
+  background-size: cover;
+  width: 100%;
   height: 100%;
   border-radius: 50%;
 }
@@ -78,11 +78,7 @@ mat-card img {
 .text-menu-title-role {
   font-size: 14px;
   line-height: 20px;
-
-  /* identical to box height, or 143% */
   letter-spacing: 0.25px;
-
-  /* 00. On Surface / Medium Emphasis */
   color: rgba(0, 0, 0, 0.6);
 }
 
@@ -100,4 +96,9 @@ mat-card img {
 .mat-icon-menu{
   width: 22px;
   height: 22px;
+}
+
+
+.active {
+  background: #9b27b036
 }
