--- a/src/app/main/pages/improvements/improvements.component.html
+++ b/src/app/main/pages/improvements/improvements.component.html
@@ -1,1 +1,3 @@
-<p>improvements works!</p>
+
+    <button mat-flat-button (click)="openDialog('insert')">Insert</button>
+    <button mat-flat-button (click)="openDialog('edit')">Edit</button>
