upload files .xls

--- a/src/app/main/pages/improvements/improvements.component.scss
+++ b/src/app/main/pages/improvements/improvements.component.scss
@@ -20,3 +20,13 @@
 table {
     width: 100%;
   }
+
+.btn-state-validate{
+    background: #27AE60; 
+    color: white;   
+}
+
+.btn-state-register{
+    background: #F2C94C;  
+    color: black;   
+}
