--- a/src/app/main/pages/improvements/improvements.component.html
+++ b/src/app/main/pages/improvements/improvements.component.html
@@ -4,13 +4,16 @@
     <div class="header-container">
         <mat-icon mat-list-icon class="mat-icon-menu" style="font-size: 2.5em;">turned_in</mat-icon>
         <h1 style="font-size: 2.5em; margin-left: 20px;">Mejoras</h1>
-        <button type="file" aria-label="add" mat-button class="btn-add">
-            <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
-            CREAR
-        </button>
+        
+        <input #fileInput2 style="display: none" type="file" (change)="onFileSelectedImprovements($event)"
+            accept=".xls,.xlsx" id="fileInput2">
+            <button type="file" aria-label="add" mat-button class="btn-add"  accept=".xls,.xlsx" (click)="fileInput2.click()" >
+              <mat-icon aria-label="agregar" class="icon-add">add</mat-icon>
+               CREAR
+            </button>
     </div>
     <div class="body-container">
-      <div>
+      <div *ngIf="improvement$ |async">
         <table mat-table [dataSource]="improvementDataSource" class="mat-elevation-z8">
 
             <ng-container matColumnDef="date">
@@ -34,29 +37,7 @@
               <th mat-header-cell *matHeaderCellDef> Mejora critica </th>
               <td mat-cell *matCellDef="let element"> {{element.review}} </td>
             </ng-container>
-            <ng-container matColumnDef="qty">
-              <th mat-header-cell *matHeaderCellDef> Qty </th>
-              <td mat-cell *matCellDef="let element"> {{element.qty}} </td>
-            </ng-container>
-            <ng-container matColumnDef="current">
-              <th mat-header-cell *matHeaderCellDef> N/P Actual </th>
-              <td mat-cell *matCellDef="let element"> {{element.current}} </td>
-            </ng-container>
-            <ng-container matColumnDef="improved">
-              <th mat-header-cell *matHeaderCellDef>N/P Mejorado </th>
-              <td mat-cell *matCellDef="let element"> {{element.improved}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="stock">
-              <th mat-header-cell *matHeaderCellDef> Stock </th>
-              <td mat-cell *matCellDef="let element"> {{element.stock}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="availability">
-              <th mat-header-cell *matHeaderCellDef> Disponibilidad </th>
-              <td mat-cell *matCellDef="let element"> {{element.availability}}   </td>
-            </ng-container>
-           
+                       
             <ng-container matColumnDef="user">
               <th mat-header-cell *matHeaderCellDef> Usuario </th>
               <td mat-cell *matCellDef="let element"> {{element.user}} </td>
@@ -64,7 +45,12 @@
           
             <ng-container matColumnDef="state">
               <th mat-header-cell *matHeaderCellDef> Estado </th>
-              <td mat-cell *matCellDef="let element"> <button mat-button style="background: #27AE60; color: white;"> {{element.state}}</button> </td>
+
+              <td mat-cell *matCellDef="let element"> 
+                <button mat-button  [ngClass]="{'btn-state-register': element.state==='Registrado','btn-state-validate': element.state==='Validado'}"> 
+                  {{element.state}}
+                </button>                 
+              </td>
             </ng-container>
           
             <ng-container matColumnDef="actions" stickyEnd>
