init page setting

--- a/src/app/main/pages/improvements/improvements.component.html
+++ b/src/app/main/pages/improvements/improvements.component.html
@@ -88,3 +88,7 @@
     </div>
         
 </div>
+
+<!-- <button mat-flat-button (click)="openDialog('insert')">Insert</button>
+<button mat-flat-button (click)="openDialog('edit')">Edit</button>
+ -->
