--- a/src/app/main/pages/settings/settings.component.scss
+++ b/src/app/main/pages/settings/settings.component.scss
@@ -20,3 +20,20 @@
 table {
     width: 100%;
   }
+
+.footer{
+  text-align: end;
+  margin: 50px 10px 50px 10px;
+}
+.footer__btn-close{
+  color: #B00020;
+  border: 1px solid #B00020;
+  margin-right: 20px;
+  padding: 0px 30px 0px 30px;
+}
+.footer__btn-save{
+    background: #6200EE;
+    color: white;
+    padding: 0px 30px 0px 30px;
+
+}
