--- a/src/app/main/pages/improvements/improvements.component.html
+++ b/src/app/main/pages/improvements/improvements.component.html
@@ -55,7 +55,7 @@
           <td mat-cell *matCellDef="let raw; let i = index">
             <ng-container>
               <mat-menu #rawMenu="matMenu">
-                <button class="w3-small" mat-menu-item>
+                <button class="w3-small" mat-menu-item (click)="openDialog('validate',i)">
                   <mat-icon>edit</mat-icon>
                   Validar
                 </button>
