--- a/src/app/main/pages/improvements/dialogs/validate-dialog-improvenments/validate-dialog-improvenments.component.html
+++ b/src/app/main/pages/improvements/dialogs/validate-dialog-improvenments/validate-dialog-improvenments.component.html
@@ -12,6 +12,9 @@
                     <mat-form-field appearance="outline" style="width: 200px;">
                         <mat-label>Nombre</mat-label>
                         <input matInput placeholder="Nombre" formControlName="name">
+                        <!-- <mat-error *ngIf="emailFormControl.hasError('required')">
+                            Email is <strong>required</strong>
+                          </mat-error> -->
                     </mat-form-field>
                     <mat-form-field appearance="outline" style="width: 200px;">
                         <mat-label>Modelo</mat-label>
