--- a/src/app/main/pages/improvements/dialogs/create-dialog-improvenments/create-dialog-improvenments.component.html
+++ b/src/app/main/pages/improvements/dialogs/create-dialog-improvenments/create-dialog-improvenments.component.html
@@ -55,7 +55,7 @@
                             Campo <strong>requerido.</strong>
                         </mat-error>
                         <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                        <mat-datepicker #picker1></mat-datepicker>
+                        <mat-datepicker #picker1 [disabled]=false></mat-datepicker>
                     </mat-form-field>
                 </div>
                 <div class="container-form__checked--cheked">
@@ -71,31 +71,49 @@
                 <div *ngFor="let _ of parts.controls; let i=index" class="form-array">
                     <div [formGroupName]="i" class="container-form-array">
                         <mat-form-field appearance="outline" style="width: 200px;" class="container-form-array__inputs">
-                            <mat-label>Label</mat-label>
-                            <input matInput placeholder="Label" formControlName="spareParts">
-                            <mat-error *ngIf="this.parts.controls[i].get('spareParts').errors">
+                            <mat-label>Parte</mat-label>
+                            <input matInput placeholder="Parte" 
+                            formControlName="spareParts"
+                            [matAutocomplete]="auto1">
+                            <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete">
+                                <mat-option *ngFor="let option1 of arrParts1[i] | async" [value]="option1">
+                                  {{option1}}
+                                </mat-option>
+                              </mat-autocomplete>
+                            <mat-error *ngIf="parts.controls[i].get('spareParts').errors">
                                 Campo <strong>requerido.</strong>
                             </mat-error>
                             <mat-icon matSuffix>settings</mat-icon>
                         </mat-form-field>
+
+
                         <mat-form-field appearance="outline" style="width: 100px;" class="container-form-array__inputs">
                             <mat-label>Cantidad</mat-label>
                             <input matInput placeholder="Cantidad" formControlName="amount">
-                            <mat-error *ngIf="this.parts.controls[i].get('amount').errors">
+                            <mat-error *ngIf="parts.controls[i].get('amount').errors">
                                 Campo <strong>requerido.</strong>
                             </mat-error>
                         </mat-form-field>
+                       
                         <mat-form-field appearance="outline" style="width: 200px;" class="container-form-array__inputs">
                             <mat-label>Nº de parte actual</mat-label>
-                            <input matInput placeholder="Nº de parte actual" formControlName="currentPart">
-                            <mat-error *ngIf="this.parts.controls[i].get('currentPart').errors">
+                            <input matInput placeholder="Parte" 
+                            formControlName="currentPart"
+                            [matAutocomplete]="auto2">
+                            <mat-autocomplete autoActiveFirstOption #auto2="matAutocomplete">
+                                <mat-option *ngFor="let option2 of arrParts2[i] | async" [value]="option2">
+                                  {{option2}}
+                                </mat-option>
+                              </mat-autocomplete>
+                              <mat-error *ngIf="parts.controls[i].get('currentPart').errors">
                                 Campo <strong>requerido.</strong>
                             </mat-error>
                         </mat-form-field>
+                       
                         <mat-form-field appearance="outline" style="width: 200px;" class="container-form-array__inputs">
                             <mat-label>Nº de parte mejorada</mat-label>
                             <input matInput placeholder="Nº de parte mejorada" formControlName="improvedPart">
-                            <mat-error *ngIf="this.parts.controls[i].get('improvedPart').errors">
+                            <mat-error *ngIf="parts.controls[i].get('improvedPart').errors">
                                 Campo <strong>requerido.</strong>
                             </mat-error>
                         </mat-form-field>
