:art: Conflicts dialogs

--- a/src/app/main/pages/improvements/improvements.component.html
+++ b/src/app/main/pages/improvements/improvements.component.html
@@ -45,10 +45,8 @@
               [ngClass]="{'btn-state-register': element.state==='Registrado','btn-state-validate': element.state==='Validado'}">
               {{element.state}}
             </button>
-    </div>
-    <div class="body-container">
-      <div *ngIf="improvement$ |async">
-        <table mat-table [dataSource]="improvementDataSource" class="mat-elevation-z8">
+          </td>
+        </ng-container>
 
         <ng-container matColumnDef="actions" stickyEnd>
           <th mat-header-cell *matHeaderCellDef>
