:bug: : bug: :bug: Autocomplet amount with

--- a/src/app/main/pages/improvements/dialogs/create-dialog-improvenments/create-dialog-improvenments.component.html
+++ b/src/app/main/pages/improvements/dialogs/create-dialog-improvenments/create-dialog-improvenments.component.html
@@ -74,7 +74,8 @@
                             <mat-label>Parte</mat-label>
                             <input matInput placeholder="Parte" 
                             formControlName="spareParts"
-                            [matAutocomplete]="auto1">
+                            [matAutocomplete]="auto1"
+                            >
                             <mat-autocomplete autoActiveFirstOption #auto1="matAutocomplete">
                                 <mat-option *ngFor="let option1 of arrParts1[i] | async" [value]="option1">
                                   {{option1}}
